--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@types/date-fns": "^2.6.0",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
+    "circular-buffer": "^1.0.2",
     "css-loader": "^3.6.0",
     "date-fns": "^2.14.0",
     "electron": "^9.0.5",
+    "electron-store": "^5.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "rollup-plugin-typescript2": "^0.27.1",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
